# omniwheelstest

MoveToPoint-withcontroller/: pipline.py  thread_manager.py
MoveToPoint-withcontroller/VelocityFact/: velocity.py  wheels_num.txt
MoveToPoint-withcontroller/controller/: builder.py  controller.py  pid_controller.py
MoveToPoint-withcontroller/rosdata/: data_input.py  transdata.py
MoveToPoint-withcontroller/trajectory/: client.py  linear.py
omniwheel_control/: CMakeLists.txt
omniwheel_control/launch/: move_control.launch
omniwheel_control/msg/: num.msg
omniwheel_control/src/: move_control.cpp  teleop_twist_keyboard.cpp  trans.py  trans_demo.py  wheels_num.txt
tele_controll/: .ycm_extra_conf.py
tele_controll/devel/: .catkin  local_setup.sh
tele_controll/devel/include/omniwheel_control/: move_base.h  num.h
tele_controll/devel/include/omniwheel_keyboard_control/: move_base.h  num.h
tele_controll/devel/include/teleop_twist_keyboard_cpp/: move_base.h  num.h
tele_controll/devel/lib/omniwheel_control/: move_control  omniwheel_control  teleop_twist_keyboard
tele_controll/devel/lib/omniwheel_keyboard_control/: move_control  omniwheel_keyboard_control  sub_test
tele_controll/devel/lib/pkgconfig/: omniwheel_control.pc  omniwheel_keyboard_control.pc  teleop_twist_keyboard_cpp.pc
tele_controll/devel/lib/teleop_twist_keyboard_cpp/: move_control  sub_test  teleop_twist_keyboard
workspace/devel/: .catkin
workspace/devel/include/omniwheel_control/: move_base.h  (+2 more)
workspace/src/: wheels_num.txt
workspace/src/omniwheel_control/: CMakeLists.txt  Readme.md
(+65 files in other folders)
